# prog2

./: FSM.docx  README.md  Tea-machine.docx  Untitled Diagram.drawio  background-problem.docx  functional-design.docx  functional-specs.docx  tea-machine.txt  technical-specs.docx
app/: CMakeLists.txt  FSM_Framework.pro.user.36aa37b  appInfo.h  events.c  events.h  main.c  states.c  states.h
app/console_functions/: display.c
app/fsm_functions/: fsm.c  fsm.h
tea-machine-code/: appInfo.h  events.c  events.h  main.c  states.c  states.h
tea-machine-code/fsm_functions/: fsm.c
